--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -2,9 +2,9 @@
 
 
 $main-color-bg: #EAF5F5;
-$main-color: #2F9B9B;
-$sub-color1: #FEDFE1;
-$sub-color2: #FFE8B7;
+$main-Color: #FCEED0;
+$sub-Color1: #F5A512;
+$sub-Color2: #527CAF;
 
 img {
     width: 100%;
@@ -12,8 +12,7 @@ img {
 }
 
 body {
-    background-color: $main-color-bg;
-    font-family: 'Zen Old Mincho', serif;
+    font-family: 'Zen Maru Gothic', serif;
     font-size: 62.5%;
 }
 
