--- a/src/scss/foundation/_font.scss
+++ b/src/scss/foundation/_font.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&family=Zen+Old+Mincho&display=swap');
