--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,7 +1,8 @@
 @use "../foundation/base" as *;
 @use "../foundation/mixin" as *;
 
-.l-question {
+
+.l-hero {
     &__container {
         max-width: calc(1000px + 2rem);
         margin-inline: auto;
@@ -10,6 +11,32 @@
 
     @include sp {
         max-width: 100%;
+        padding-inline: 1rem;
+    }
+}
+
+.l-trouble {
+    &__container {
+        max-width: calc(1000px + 2rem);
+        margin-inline: auto;
+        padding: 1rem;
+    }
+
+    @include sp {
+        max-width: 100%;
+        padding-inline: 1rem;
+    }
+}
+
+.l-question {
+    &__container {
+        max-width: calc(1500px + 2rem);
+        margin-inline: auto;
+        padding: 1rem;
+    }
+
+    @include sp {
+        max-width: 200%;
         padding-inline: 1rem;
     }
 }
