--- a/public/css/style.css
+++ b/public/css/style.css
@@ -992,25 +992,31 @@ main .l-hero__CV {
 .l-trouble__wrapper__calc {
   width: 45%;
   height: auto;
-  background: white;
   margin: 5rem 0;
   border-radius: 30px;
   position: relative;
+  z-index: 2;
+}
+.l-trouble__wrapper__calc::after {
+  content: "";
+  position: absolute;
+  bottom: -1rem;
+  left: 0;
+  background: white;
+  border-radius: 20px;
+  width: 100%;
+  height: 250px;
+  z-index: -1;
 }
 .l-trouble__wrapper__calc-img {
-  width: 40%;
+  width: 45%;
   margin: 0 auto;
-  position: absolute;
-  top: -5rem;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
 }
 .l-trouble__wrapper__calc-text {
   width: 100%;
-  padding: 6rem 0 2rem 0;
+  padding: 2rem 0 2rem 0;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 .l-trouble__wrapper__calc-text span {
   font-weight: bold;
@@ -1063,28 +1069,10 @@ main .l-hero__CV {
   .l-trouble__wrapper {
     width: 100%;
     height: 100vh;
-    position: relative;
+    display: block;
   }
   .l-trouble__wrapper-img {
     width: 60%;
-    position: absolute;
-    bottom: 0;
-  }
-  .l-trouble__wrapper-img:nth-child(1) {
-    top: 0;
-    left: 0;
-  }
-  .l-trouble__wrapper-img:nth-child(2) {
-    top: 13rem;
-    right: 0;
-  }
-  .l-trouble__wrapper-img:nth-child(3) {
-    top: 26rem;
-    left: 0;
-  }
-  .l-trouble__wrapper-img:nth-child(4) {
-    top: 39rem;
-    right: 0;
   }
 }
 
