--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -183,25 +183,33 @@ main {
         &__calc {
             width: 45%;
             height: auto;
-            background: white;
             margin: 5rem 0;
             border-radius: 30px;
             position: relative;
+            z-index: 2;
+
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: -1rem;
+                left: 0;
+                background: white;
+                border-radius: 20px;
+                width: 100%;
+                height: 250px;
+                z-index: -1;
+            }
 
             &-img {
-                width: 40%;
+                width: 45%;
                 margin: 0 auto;
-                position: absolute;
-                top: -5rem;
-                left: 50%;
-                transform: translate(-50%, 0);
             }
 
             &-text {
                 width: 100%;
-                padding: 6rem 0 2rem 0;
+                padding: 2rem 0 2rem 0;
                 text-align: center;
-                font-size: 1.6rem;
+                font-size: 1.4rem;
 
                 span {
                     font-weight: bold;
@@ -258,34 +266,30 @@ main {
         &__wrapper {
             width: 100%;
             height: 100vh;
-            position: relative;
+            display: block;
 
             &-img {
                 width: 60%;
-                position: absolute;
-                bottom: 0;
 
-                &:nth-child(1) {
-                    top: 0;
-                    left: 0;
-                }
+                // &:nth-child(1) {
+                //     top: 0;
+                //     left: 0;
+                // }
 
-                &:nth-child(2) {
-                    top: 13rem;
-                    right: 0;
-                }
+                // &:nth-child(2) {
+                //     top: 13rem;
+                //     right: 0;
+                // }
 
-                &:nth-child(3) {
-                    top: 26rem;
-                    left: 0;
-                }
+                // &:nth-child(3) {
+                //     top: 26rem;
+                //     left: 0;
+                // }
 
-                &:nth-child(4) {
-                    top: 39rem;
-                    right: 0;
-                }
-
-
+                // &:nth-child(4) {
+                //     top: 39rem;
+                //     right: 0;
+                // }
             }
         }
     }
