--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1474,13 +1474,14 @@ main .l-hero__CV {
     width: 90%;
     border-radius: 50px;
     padding: 1rem;
-    font-size: 2.5vw;
+    font-size: 1rem;
     font-weight: bold;
     -webkit-transform: translate(0, -50%);
             transform: translate(0, -50%);
+    word-break: keep-all;
   }
   .l-support__wrap-ttl span {
-    font-size: 3.5vw;
+    font-size: 1.4rem;
   }
   .l-support__wrap-text {
     width: 80%;
