--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -718,12 +718,13 @@ main {
                 width: 90%;
                 border-radius: 50px;
                 padding: 1rem;
-                font-size: 2.5vw;
+                font-size: 1rem;
                 font-weight: bold;
                 transform: translate(0, -50%);
+                word-break: keep-all;
 
                 span {
-                    font-size: 3.5vw;
+                    font-size: 1.4rem;
                 }
             }
 
