--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -961,6 +961,8 @@ main {
             &-ttl {
                 font-size: 2.4rem;
                 margin-top: .4rem;
+                word-break: keep-all;
+
             }
         }
 
@@ -1007,7 +1009,8 @@ main {
                 &-ttl {
                     font-size: 2rem;
                     margin-top: .8rem;
-                    word-break: break-word;
+                    word-break: keep-all;
+
                 }
             }
 
