--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -77,140 +77,147 @@
         background: white;
         z-index: 100;
 
+        &-logo {
+            padding: .5rem;
+
+            img {
+                width: 50%;
+            }
+        }
+
         &__wrap {
             width: 90%;
-            height: 8vh;
+            height: 100%;
             display: flex;
             align-items: center;
+            justify-content: center;
+            margin: 0 auto;
 
             &-logo {
                 margin: 0 0 0 3rem;
 
                 img {
-                    width: 45%;
-                }
-            }
-
-            &__hum {
-                width: 50%;
-
-                .l-header__ham {
-                    &-logo {
-                        width: 20%;
-                        position: fixed;
-                        top: 10px;
-                        left: 30px;
-                        z-index: -1;
-
-                        img {
-                            width: 80px;
-                            height: 64px;
-                        }
-                    }
-
-                    #menu__toggle {
-                        opacity: 0;
-
-                        &:checked~ {
-
-                            .menu__btn>span {
-                                transform: rotate(45deg);
-                                width: 35px;
-                                position: absolute;
-                                right: 7px;
-
-                                &::before {
-                                    top: 0;
-                                    transform: rotate(0);
-                                    background: #fff;
-
-                                }
-
-                                &::after {
-                                    top: 0;
-                                    transform: rotate(90deg);
-                                    background: #fff;
-                                }
-                            }
-
-                            .menu__content {
-                                visibility: visible;
-                                right: 0;
-                                z-index: -1;
-                            }
-                        }
-                    }
-
-                    .menu__btn {
-                        display: flex;
-                        align-items: center;
-                        position: fixed;
-                        top: 10px;
-                        right: 20px;
-                        width: 50px;
-                        height: 50px;
-                        cursor: pointer;
-                        z-index: 999;
-
-                        .menu__btn__bar {
-                            display: block;
-                            position: absolute;
-                            right: 7px;
-                            width: 100%;
-                            width: 40px;
-                            height: 2px;
-                            background-color: $sub-Color1;
-                            transition-duration: 0.5s;
-
-                            &::before,
-                            &::after {
-                                @extend .menu__btn__bar;
-                                content: "";
-                            }
-
-                            &::before {
-                                top: -8px;
-                                left: 0;
-                                content: "";
-                            }
-
-                            &::after {
-                                top: 8px;
-                                left: 0;
-                                content: "";
-                            }
-                        }
-                    }
-
-                    .menu__content {
-                        position: fixed;
-                        visibility: hidden;
-                        top: 0;
-                        width: 300px;
-                        height: 100%;
-                        display: block;
-                        right: -100%;
-                        margin: 0;
-                        padding: 12rem 0;
-                        list-style: none;
-                        background-color: $sub-Color1;
-                        box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-                        transition-duration: 0.5s;
-
-                        &-text {
-                            display: block;
-                            padding: 12px 34px;
-                            transition-duration: 0.25s;
-
-                            a {
-                                text-decoration: none;
-                                color: #fff;
-                                font-size: 1.4rem;
-                            }
-                        }
-                    }
+                    width: 80%;
                 }
             }
         }
+
+        &__inner {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.5rem 1rem;
+        }
     }
+}
+
+
+.l-drawer {
+    &__button.active {
+        span {
+            &:first-child {
+                transform: translate(-50%, -50%) rotate(-45deg);
+            }
+
+            &:nth-child(2) {
+                opacity: 0;
+            }
+
+            &:last-child {
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
+        }
+    }
+
+    &__button {
+        position: relative;
+        width: 3rem;
+        height: 3rem;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        z-index: 999;
+        background: white;
+
+        span {
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 2rem;
+            height: 2px;
+            background-color: $sub-Color1;
+            transform: translateX(-50%);
+
+
+
+            &:first-child {
+                transform: translate(-50%, calc(-50% - 0.5rem));
+                transition: transform 0.3s ease;
+            }
+
+            &:nth-child(2) {
+                transform: translate(-50%, -50%);
+                transition: opacity 0.3s ease;
+            }
+
+            &:last-child {
+                transform: translate(-50%, calc(-50% + 0.5rem));
+                transition: transform 0.3s ease;
+            }
+        }
+    }
+
+    &__nav.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &__nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        transition: opacity 0.3s ease;
+        opacity: 0;
+        visibility: hidden;
+
+        &__inner {
+            position: relative;
+            width: 80%;
+            height: 100%;
+            background-color: white;
+            padding: 8rem 1.5rem 1rem;
+            margin: 0 0 0 auto;
+            overflow: scroll;
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
+        }
+
+        &__menu {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        &__link {
+            display: block;
+            color: white;
+            font-size: 1.2rem;
+            text-decoration: none;
+            padding: 1rem 1rem;
+            border-bottom: solid 1px lightgray;
+
+        }
+    }
+}
+
+
+
+
+.l-drawer__nav.active .l-drawer__nav__inner {
+    background: $sub-Color1;
+    transform: translateX(0);
 }
